--- a/list-service/package.json
+++ b/list-service/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "amqplib": "^0.10.9",
     "axios": "^1.7.5",
     "cors": "^2.8.5",
     "express": "^4.19.2",
